Fixed an extra scrollbar bug on income declaration detail page.

--- a/apps/incomedeclaration/static/css/incomedeclaration/base.css
+++ b/apps/incomedeclaration/static/css/incomedeclaration/base.css
@@ -26,7 +26,7 @@
     padding: 0 1em;
 }
 
-#incomedeclaration ul {
+#incomedeclaration #detail {
     max-height: 660px;
     overflow: auto;
 }
